tests/duarouter/function/skip_routing/invalid/knownbugs.duarouter

[Reported by erdm_ja at 09Dec08:43:47]
search_string:Error
trigger_on_absence:1
search_file:errors
ignore_other_errors:1
full_description:Error not found
brief_description:see #6113
